--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,9 @@ h2 {
 }
 
 /* task5 */
-.task5{height: 100px;}
+.task5 {
+  height: 100px;
+}
 
 header {
   background-color: #0c5f21;
@@ -179,24 +181,28 @@ header {
   cursor: pointer;
   text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
 }
+
 /* task6 */
-.task6{
+.task6 {
   width: 200px;
   margin-bottom: 50px;
 }
-.loading{
+
+.loading {
   width: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.fill{
+
+.fill {
   width: 100%;
   height: 20px;
   border-radius: 7px;
   border: 2px solid black;
 }
-.full{
+
+.full {
   height: 100%;
   background-color: #b70e0e;
   border-radius: 7px;
@@ -205,7 +211,13 @@ header {
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 }
-@keyframes loading{
-  0%{width: 0;}
-  100%{ width: 100%;}
+
+@keyframes loading {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 100%;
+  }
 }
